license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MLHObjectionToGarnishment"
version = "0.0.3"
description = "A Docassemble tool to create forms to object to garnishment in Michigan."
readme = "README.md"
authors = [
    { name = "Emily Miller", email = "ekressmiller@lsscm.org" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.demo>=1.8.11",
    "docassemble.mlhframework @ git+https://github.com/mplp/docassemble-mlhframework.git@main",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
